<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/artist_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/artist_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_author"
        app:layout_constraintBottom_toTopOf="@+id/album_name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_text_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/album_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/album_authorId_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_author">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/album_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/album_authorId_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/album_authorId_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author_id" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_album"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_authorId_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>